tests/trybuild/stages/unexpected_command_first.stderr
error: no rules expected the token `unexpected`
 --> tests/trybuild/stages/unexpected_command_first.rs:4:5
  |
4 |     unexpected,
  |     ^^^^^^^^^^ no rules expected this token in macro call
