tests/trybuild/stages/unexpected_command_first.rs
use brood::system::schedule::stages;

type Stages = stages!{
    unexpected,
    flush,
};

fn main() {}
